Bug 71117 - [BYT-M Bisected]x11perf –aa10text performance reduced ~78%
Summary: [BYT-M Bisected]x11perf –aa10text performance reduced ~78%
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-01 09:40 UTC by zhoujian
Modified: 2013-11-04 01:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Perf report for bad commit (163.69 KB, text/plain)
2013-11-01 09:40 UTC, zhoujian
no flags Details
Perf report for good commit (169.29 KB, text/plain)
2013-11-01 09:42 UTC, zhoujian
no flags Details

Description zhoujian 2013-11-01 09:40:40 UTC
Created attachment 88467 [details]
Perf report for bad commit

System Environment:     
----------------------------------------------
Platform: BYT-M
Libdrm:(master)2.4.47-2-g45810d3d7546f3ddbcdae114c6726ada30e919c9
Mesa: (master)git-8bd4476
Xserver: (master)xorg-server-1.14.99.3-24-g902ff0b3497d20
Xf86_video_intel: (master)2.99.905-41-ged16e34c00d5eb5c
Cairo: (master)98fef3cef2d0f7f463a2e4f9f1b35b09f7b6ea77
Kernel:	(drm-intel-nightly) 164a4cb4c1431a

Bug detailed description:
----------------------------------------------
X11perf –aa10text performance reduced ~78% on Raw X and gnome-session. The problem only exists on BYT-M.
It’s Xf86_video_intel regression, bisecting show that the first bad commit is:
40d4199f151a39ecebf127cf468b4470d2906f4e
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Oct 28 10:45:52 2013 +0000
    sna: Use page-count for mappable aperture size
    For consistency with the other aperture metrics and correctness when
    passing around required number of pages.
Signed-off-by: Chris Wilson chris@chris-wilson.co.uk

Performance
--------------------------------------------------------------------
X11perf –aa10text on Raw X
drm-intel-next-queued     git-40d4199  git-9266e35
                          1490000        6860000

Reproduce steps:
---------------------------------------------
1, xinit&
2, vblank_mode=0 x11perf –a10text
Comment 1 zhoujian 2013-11-01 09:42:05 UTC
Created attachment 88468 [details]
Perf report for good commit
Comment 2 Chris Wilson 2013-11-01 11:06:19 UTC
commit 6b1a6f32179f7bff8503c6b8b38351a7cf1d08b7
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Nov 1 10:48:06 2013 +0000

    sna: Scale uses of aperture_mappable by PAGE_SIZE
    
    After converting aperture_mappable to count in pages, there were a few
    residual users expecting a byte count.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=71117
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 zhoujian 2013-11-04 01:40:25 UTC
Verified it.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.